--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "vscode-test": "^1.3.0"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.1.2",
+    "@grpc/proto-loader": "^0.5.5",
     "vscode": "^1.1.37"
   }
 }
