--- a/package.json
+++ b/package.json
@@ -37,15 +37,23 @@
     "lint": "eslint src --ext ts",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
-    "test": "node ./out/test/runTest.js"
+    "test": "npm run extensionRuns",
+    "extensionRuns": "nyc mocha -r ts-node/register .test/suite/extensionRuns.ts"
+    // "test": "node ./.test/suite/extensionRuns.js"
   },
   "devDependencies": {
     "@types/vscode": "^1.47.0",
+    "@types/chai": "^4.2.4",
     "@types/glob": "^7.1.1",
     "@types/mocha": "^7.0.2",
+    "nyc": "^15.1.0",
+    "ts-loader": "^8.0.2",
+    "ts-node": "^8.10.2",
     "@types/node": "^13.11.0",
     "eslint": "^6.8.0",
     "@typescript-eslint/parser": "^2.30.0",
+    "chai": "^4.2.0",
+    "eslint-plugin-mocha": "^7.0.1",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "glob": "^7.1.6",
     "mocha": "^7.1.2",
